Changed index header

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
 
   <header class="header">
-    <h1 class="header-title">HOME</h1>
+    <h1 class="header-title">UW-Pesa HOME</h1>
   </header>
 
   <!--<nav>
